--- a/scripts/d.correlate/d.correlate.html
+++ b/scripts/d.correlate/d.correlate.html
@@ -23,6 +23,11 @@ g.region raster=lsat7_2002_30 -p
 d.correlate map=lsat7_2002_30,lsat7_2002_40
 </pre></div>
 
+<center>
+<img src="d_correlate_plot.png" border=1 alt="Scatterplot of two LANDSAT TM7 channels"><br>
+Scatterplot of two LANDSAT TM7 channels
+</center>
+
 <h2>SEE ALSO</h2>
 
 <em>
