--- a/raster/r.regression.line/r.regression.line.html
+++ b/raster/r.regression.line/r.regression.line.html
@@ -60,6 +60,14 @@ echo $R
 0.894038
 </pre></div>
 
+<h2>SEE ALSO</h2>
+
+<em>
+<a href="d.correlate.html">d.correlate</a>,
+<a href="r.regression.multi.html">r.regression.multi</a>,
+<a href="r.stats.html">r.stats</a>
+</em>
+
 
 <h2>AUTHORS</h2>
 
