--- a/raster/r.resamp.stats/r.resamp.stats.html
+++ b/raster/r.resamp.stats/r.resamp.stats.html
@@ -47,7 +47,8 @@ r.resamp.stats -w input=el_D782_6m output=el_D782_20m
 <em>
 <a href="g.region.html">g.region</a>,
 <a href="r.resample.html">r.resample</a>,
-<a href="r.resamp.rst.html">r.resamp.rst</a>
+<a href="r.resamp.rst.html">r.resamp.rst</a>,
+<a href="r.resamp.filter.html">r.resamp.filter</a>,
 <a href="r.resamp.interp.html">r.resamp.interp</a>
 </em>
 
