v.krige: * introduce kappa smoothing parameter of the Matern model; * use correct model names; * allow to reuse automatic fit values.
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66777 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/v.krige/v.krige.html
+++ b/scripts/v.krige/v.krige.html
@@ -17,6 +17,9 @@ result. Good knowledge of the dataset is more valuable than hundreds
 of parameters or powerful hardware. See Isaaks and Srivastava's book,
 exhaustive and clear even if a bit outdated.
 
+<p>Auto-fit variogram option will update sill, nugget, range and kappa values
+with fitted ones. Enabling the values will pass them to auto-fit and thus
+preserve from modification and thus they might differ from fitted ones.
 
 <h3>Dependencies</h3>
 
