variables: formatting cosmetics
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66780 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/init/variables.html
+++ b/lib/init/variables.html
@@ -299,17 +299,14 @@ PERMANENT
     GRASS session is quited.</dd>
 
   <dt>GRASS_VECTOR_TMPDIR_MAPSET</dt>
-  <dd> By default GRASS temporary directory is located in
+  <dd>[vectorlib]<br> By default GRASS temporary directory is located in
   <tt>$LOCATION/$MAPSET/.tmp/$HOSTNAME</tt>. If GRASS_VECTOR_TMPDIR_MAPSET is
   set to '0', the temporary directory is located in TMPDIR
   (environmental variable defined by the user or GRASS initialization
-  script if not given).
-
-  <p>
+  script if not given).<br>
   Important note: This variable is currently used only in vector
   library. In other words the variable is ignored by raster or
-  raster3d library.
-  </dd>
+  raster3d library.</dd>
 
   <dt>GRASS_VECTOR_TOPO_DEBUG</dt>
   <dd>[vectorlib, v.generalize]<br> If the environment variable
