--- a/scripts/r.reclass.area/r.reclass.area.html
+++ b/scripts/r.reclass.area/r.reclass.area.html
@@ -14,17 +14,22 @@ is filtered for large areas (removing smaller areas from the map):
 <div class="code"><pre>
 g.region raster=zipcodes -p
 r.report zipcodes unit=h
-# extract only areas &gt; 2000 ha, NULL otherwise:
-r.reclass.area input=zipcodes output=zipcodes_larger2000ha greater=2000
+
+# extract only areas greater than 2000 ha, NULL otherwise:
+r.reclass.area input=zipcodes output=zipcodes_larger2000ha \
+               mode=greater value=2000
+
+r.report zipcodes_larger2000ha unit=h
 </pre></div>
 
 In this example, the ZIP code map in the North Carolina sample dataset location
-is filtered for smaller  areas which are substituted with the value of the respective
+is filtered for smaller areas which are substituted with the value of the respective
 adjacent area with largest shared boundary:
 
 <div class="code"><pre>
-# reclass removing area minor of 1000 ha
-r.reclass.area input=zipcodes output=zipcodes_rmarea1000 lesser=1000 method=rmarea
+# reclass by substitutional removing of areas minor of 1000 ha
+r.reclass.area input=zipcodes output=zipcodes_minor1000ha \
+               mode=lesser value=1000 method=rmarea
 </pre></div>
 
 <h2>SEE ALSO</h2>
