various typo fixed (trac https://trac.osgeo.org/grass/ticket/2803)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66871 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.in.xyz/r.in.xyz.html
+++ b/raster/r.in.xyz/r.in.xyz.html
@@ -197,7 +197,7 @@ v.surf.rst in=lidar_min_pt elev=lidar_min.rst
 <h3>Import of x,y,string data</h3>
 
 <em>r.in.xyz</em> is expecting numeric values as z column. In order to 
-perform a occurence count operation even on x,y data with non-numeric 
+perform a occurrence count operation even on x,y data with non-numeric 
 attribute(s), the data can be imported using either the x or y 
 coordinate as a fake z column for <b>method</b>=<tt>n</tt> (count 
 number of points per grid cell), the z values are ignored anyway.
