--- a/scripts/g.extension/g.extension.html
+++ b/scripts/g.extension/g.extension.html
@@ -14,7 +14,7 @@ Two types of extensions are supported:
 <li>Source code (mostly written in C programming language; may also be written
     in C++, Fortran or other languages): while on MS-Windows systems the requested
     GRASS GIS extension is downloaded pre-compiled from the GRASS GIS site, on Unix
-    based systems the installation is preceeded by the automated download of the
+    based systems the installation is preceded by the automated download of the
     extension's source code along with subsequent compilation and installation.
     This requires a compiler environment to be present on the user's computer.</li>
 </ul>
