manual: OGR links updated (trac https://trac.osgeo.org/grass/ticket/2763)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66906 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/general/g.proj/g.proj.html
+++ b/general/g.proj/g.proj.html
@@ -2,7 +2,7 @@
 
 <p><em>g.proj</em> provides a means of converting a co-ordinate system
 description (i.e. projection information) between various formats.
-If compiled without <a href="http://www.gdal.org/ogr/">OGR</a> present, the 
+If compiled without <a href="http://www.gdal.org/">OGR</a> present, the 
 functionality is limited to:
 <ul>
 <li>Reporting the projection information for the current location, 
@@ -205,7 +205,7 @@ ogr2ogr -t_srs "`g.proj -wf`" polbnda_italy_GB_ovest.shp polbnda_italy_LL.shp
 
 <a href="http://proj.maptools.org">PROJ 4</a>: Projection/datum support library<br>
 <a href="http://www.gdal.org">GDAL raster library and toolset</a><br>
-<a href="http://www.gdal.org/ogr/">OGR vector library and toolset</a>
+<a href="http://www.gdal.org/">OGR vector library and toolset</a>
 
 <p><b>Further reading</b>
 <ul>
