--- a/lib/db/sqlp/sql.html
+++ b/lib/db/sqlp/sql.html
@@ -47,7 +47,7 @@ distributions of GRASS GIS:
 <td><a href="http://www.unixodbc.org/">http://www.unixodbc.org/</a></td></tr>
 
 <tr><td><a href="grass-ogr.html">ogr</a></td><td>Data storage in OGR files</td>
-<td><a href="http://gdal.org/ogr">http://gdal.org/ogr/</a></td></tr>
+<td><a href="http://gdal.org">http://gdal.org/</a></td></tr>
 </table>
 
 <h2>NOTES</h2>
