--- a/vector/v.external.out/v.external.out.html
+++ b/vector/v.external.out/v.external.out.html
@@ -2,7 +2,7 @@
 
 <em>v.external.out</em> instructs GRASS to write vector maps in
 external data format (e.g. ESRI Shapefile, Mapinfo, and others)
-using <a href="http://gdal.org/ogr">OGR library</a>. PostGIS data can
+using <a href="http://www.gdal.org/">OGR library</a>. PostGIS data can
 be also written by
 built-in <a href="http://trac.osgeo.org/grass/wiki/Grass7/VectorLib/PostGISInterface">GRASS-PostGIS
 data provider</a>.
@@ -24,11 +24,11 @@ GRASS is not compiled with PostgreSQL support.
 <p>
 Creation <b>options</b> refer to the output format specified
 by <b>format</b> option. See the list of valid creation options
-at <a href="http://www.gdal.org/ogr/ogr_formats.html">OGR formats
+at <a href="http://www.gdal.org/ogr_formats.html">OGR formats
 specification page</a>, example
-for <a href="http://www.gdal.org/ogr/drv_shapefile.html">ESRI
+for <a href="http://www.gdal.org/drv_shapefile.html">ESRI
 Shapefile</a>
-or <a href="http://www.gdal.org/ogr/drv_pg.html">PostgreSQL/PostGIS</a>
+or <a href="http://www.gdal.org/drv_pg.html">PostgreSQL/PostGIS</a>
 format (section &quot;Layer Creation Options&quot;). Options are
 comma-separated pairs (<tt>key=value</tt>), the options are
 case-insensitive,
@@ -181,7 +181,7 @@ v.external.out loadsettings=gisdb_topo.txt
 
 <ul>
   <li><a href="http://trac.osgeo.org/grass/wiki/Grass7/VectorLib/OGRInterface">GRASS-OGR data provider</a></li>
-  <li><a href="http://www.gdal.org/ogr/ogr__api_8h.html">OGR vector library C API</a> documentation</li>
+  <li><a href="http://www.gdal.org/ogr__api_8h.html">OGR vector library C API</a> documentation</li>
   <li><a href="http://trac.osgeo.org/grass/wiki/Grass7/VectorLib/PostGISInterface">GRASS-PostGIS data provider</a></li>
   <li><a href="http://www.postgresql.org/docs/9.1/static/libpq.html">libpq - C Library</a></li>
 </ul>
