--- a/vector/v.in.ogr/v.in.ogr.html
+++ b/vector/v.in.ogr/v.in.ogr.html
@@ -1,7 +1,7 @@
 <h2>DESCRIPTION</h2>
 
 <em>v.in.ogr</em> imports vector data
-using <a href="http://www.gdal.org/ogr/">OGR</a> library to GRASS
+using <a href="http://www.gdal.org/">OGR</a> library to GRASS
 vector map. OGR (Simple Features Library) is part of the
 <a href="http://www.gdal.org">GDAL</a> library, so you need to
 install GDAL to use <em>v.in.ogr</em>.
@@ -46,11 +46,11 @@ larger than the threshold. Snapping is by default disabled with
 <h3>Supported OGR Vector Formats</h3>
 
 OGR library supports various vector data formats
-including <a href="http://www.gdal.org/ogr/drv_shapefile.html">ESRI
-Shapefile</a>, <a href="http://www.gdal.org/ogr/drv_mitab.html">Mapinfo
+including <a href="http://www.gdal.org/drv_shapefile.html">ESRI
+Shapefile</a>, <a href="http://www.gdal.org/drv_mitab.html">Mapinfo
 File</a>, UK .NTF, SDTS, TIGER, IHO S-57 (ENC), DGN, GML, AVCBin, REC,
 Memory, OGDI, and PostgreSQL depend on the local installation, for
-details see <a href="http://www.gdal.org/ogr/ogr_formats.html">OGR web
+details see <a href="http://www.gdal.org/ogr_formats.html">OGR web
 site</a>.
 
 <p>
@@ -345,8 +345,8 @@ with <em><a href="v.proj.html">v.proj</a></em>.</dd>
 <h2>REFERENCES</h2>
 
 <ul>
-  <li><a href="http://www.gdal.org/ogr/">OGR vector library</a></li>
-  <li><a href="http://www.gdal.org/ogr/ogr__api_8h.html">OGR vector library C API</a> documentation</li>
+  <li><a href="http://www.gdal.org/">OGR vector library</a></li>
+  <li><a href="http://www.gdal.org/ogr__api_8h.html">OGR vector library C API</a> documentation</li>
 </ul>
 
 <h2>SEE ALSO</h2>
