--- a/vector/v.out.ogr/v.out.ogr.html
+++ b/vector/v.out.ogr/v.out.ogr.html
@@ -1,7 +1,7 @@
 <h2>DESCRIPTION</h2>
 
 <em>v.out.ogr</em> converts GRASS vector map layer to any of the
-supported <a href="http://www.gdal.org/ogr/">OGR</a> vector formats
+supported <a href="http://www.gdal.org/">OGR</a> vector formats
 (like a Esri Shapefile, SpatiaLite or GML).
 
 <p>
@@ -13,20 +13,20 @@ install this library to use <em>v.out.ogr</em>.
 The OGR library supports many various formats including:
 
 <ul>
-  <li><a href="http://www.gdal.org/ogr/drv_shapefile.html">ESRI Shapefile</a></li>
-  <li><a href="http://www.gdal.org/ogr/drv_pg.html">PostGIS</a></li>
-  <li><a href="http://www.gdal.org/ogr/drv_sqlite.html">SpatiaLite</a></li>
-  <li><a href="http://www.gdal.org/ogr/drv_csv.html">CSV</a></li>
-  <li><a href="http://www.gdal.org/ogr/drv_gml.html">GML</a></li>
-  <li><a href="http://www.gdal.org/ogr/drv_kml.html">KML</a></li>
-  <li><a href="http://www.gdal.org/ogr/drv_mitab.html">Mapinfo File</a></li>
-  <li><a href="http://www.gdal.org/ogr/drv_tiger.html">TIGER</a></li>
+  <li><a href="http://www.gdal.org/drv_shapefile.html">ESRI Shapefile</a></li>
+  <li><a href="http://www.gdal.org/drv_pg.html">PostGIS</a></li>
+  <li><a href="http://www.gdal.org/drv_sqlite.html">SpatiaLite</a></li>
+  <li><a href="http://www.gdal.org/drv_csv.html">CSV</a></li>
+  <li><a href="http://www.gdal.org/drv_gml.html">GML</a></li>
+  <li><a href="http://www.gdal.org/drv_kml.html">KML</a></li>
+  <li><a href="http://www.gdal.org/drv_mitab.html">Mapinfo File</a></li>
+  <li><a href="http://www.gdal.org/drv_tiger.html">TIGER</a></li>
   <li>... and many others</li>
 </ul>
 
 <p>
 For further available other supported formats go 
-<a href="http://www.gdal.org/ogr/ogr_formats.html">here</a>.
+<a href="http://www.gdal.org/ogr_formats.html">here</a>.
 
 <h2>NOTES</h2>
 
@@ -161,8 +161,8 @@ v.out.ogr input=random3d_hull output=random3d_hull.kml format=KML type=face dsco
 <h2>REFERENCES</h2>
 
 <ul>
-<li><a href="http://www.gdal.org/ogr/">OGR vector library</a></li>
-<li><a href="http://www.gdal.org/ogr/ogr__api_8h.html">OGR vector library C API</a>
+<li><a href="http://www.gdal.org/">OGR vector library</a></li>
+<li><a href="http://www.gdal.org/ogr__api_8h.html">OGR vector library C API</a>
   documentation</li>
 </ul>
 
