--- a/db/drivers/postgres/grass-pg.html
+++ b/db/drivers/postgres/grass-pg.html
@@ -105,7 +105,7 @@ v.info -t test
 <li><a href="http://e00pg.sourceforge.net/">e00pg</a>: E00 to PostGIS filter,
 see also <em><a href="v.in.e00.html">v.in.e00</a></em>.
 </li>
-<li>GDAL/OGR <a href="http://www.gdal.org/ogr/">ogrinfo and ogr2ogr</a>:
+<li>GDAL/OGR <a href="http://www.gdal.org/">ogrinfo and ogr2ogr</a>:
 GIS vector format converter and library, e.g. ArcInfo or SHAPE to PostGIS.<br>
   <tt>ogr2ogr -f "PostgreSQL" shapefile ??</tt>
 </li>
@@ -128,7 +128,7 @@ GIS vector format converter and library, e.g. ArcInfo or SHAPE to PostGIS.<br>
 <ul>
 <li><a href="http://www.postgresql.org/">PostgreSQL web site</a></li>
 <li><a href="http://www.pgadmin.org/">pgAdmin graphical user interface</a></li>
-<li><a href="http://www.gdal.org/ogr/drv_pg.html">GDAL/OGR PostgreSQL
+<li><a href="http://www.gdal.org/drv_pg.html">GDAL/OGR PostgreSQL
 driver documentation</a></li>
 </ul>
 
