--- a/vector/v.external/v.external.html
+++ b/vector/v.external/v.external.html
@@ -17,7 +17,7 @@ v.external -f
 </pre></div>
 
 For details see
-<a href="http://www.gdal.org/ogr/ogr_formats.html">OGR web site</a>.
+<a href="http://www.gdal.org/ogr_formats.html">OGR web site</a>.
 
 <h2>EXAMPLES</h2>
 
@@ -77,7 +77,7 @@ maintaining attributes in external DBMS in also writable mode.
 
 <h2>REFERENCES</h2>
 
-<a href="http://www.gdal.org/ogr/ogr__api_8h.html">OGR vector library C API</a> documentation
+<a href="http://www.gdal.org/ogr__api_8h.html">OGR vector library C API</a> documentation
 
 <h2>SEE ALSO</h2>
 
@@ -91,7 +91,7 @@ maintaining attributes in external DBMS in also writable mode.
 </em>
 
 <p>
-<a href="http://www.gdal.org/ogr/">OGR Library</a>
+<a href="http://www.gdal.org/">OGR Library</a>
 <br>
 <a href="http://postgis.org/">PostGIS</a>
 
