variables: fix env defintion file in the manual
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66937 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/init/variables.html
+++ b/lib/init/variables.html
@@ -42,11 +42,11 @@ To set up shell environment variables permanently:
 <li>
 To get personal BASH shell definitions (aliases, color listing option, ...)
 into GRASS, store them in:<br>
-<tt>$HOME/.grass.bashrc</tt></li>
+<tt>$HOME/.grass7/bashrc</tt></li>
 <li>
 To get personal CSH shell definitions (aliases, color listing option, ...)
 into GRASS, store them in:<br>
-<tt>$HOME/.grass.cshrc</tt></li>
+<tt>$HOME/.grass7/cshrc</tt></li>
 </ul>
 
 
