g.search.module: set up svn props
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66991 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/g.search.module/g.search.module.html
+++ b/scripts/g.search.module/g.search.module.html
@@ -66,4 +66,4 @@ db.select
 
 Jachym Cepicky, OpenGeoLabs s.r.o., Czech Republic
 
-<p><i>Last changed: $Date: 2015-05-12 23:11:59 +0200 (Út, 12 kvě 2015) $</i>
+<p><i>Last changed: $Date$</i>
