--- a/scripts/g.search.modules/g.search.modules.html
+++ b/scripts/g.search.modules/g.search.modules.html
@@ -5,13 +5,13 @@ description, keywords and optionally manpages too.
 
 <h2>NOTES</h2>
 
-There can be more keywords, <em>g.search.module</em> will search for each of them
+There can be more keywords, <em>g.search.modules</em> will search for each of them
 
 <h2>EXAMPLE</h2>
 
 Search all modules, where keywords <em>buffer</em> OR <em>clip</em> can be found
 <div class="code"><pre>
-g.search.module keyword=buffer,clip
+g.search.modules keyword=buffer,clip
 
 r.circle
     keywords: raster,buffer,geometry,circle
@@ -33,7 +33,7 @@ r.buffer
 Search all modules, where keywords <em>overlay</em> AND <em>clip</em> can be
 found with some fancy terminal output
 <div class="code"><pre>
-g.search.module keyword=clip,overlay -a -c
+g.search.modules keyword=clip,overlay -a -c
 
 v.overlay
     keywords: vector,geometry,spatial query,intersection,union,clip
@@ -42,7 +42,7 @@ v.overlay
 
 Search in manual pages too 
 <div class="code"><pre>
-g.search.module -m keyword=kapri
+g.search.modules -m keyword=kapri
 
 db.execute
     keywords: database,attribute table,SQL
