r.topmodel: description for lnTe
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67016 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.topmodel/r.topmodel.html
+++ b/raster/r.topmodel/r.topmodel.html
@@ -25,7 +25,7 @@ Subcatchment 1
 #								- Liaw (1988)
 0.000075
 
-# lnTe [ln(m^2/h)]: Areal average of ln(T0)
+# lnTe [ln(m^2/h)]: Areal average of the soil surface transmissivity
 4.
 
 # m [m]: Scaling parameter
